Autocomplete Overflow fix

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -103,5 +103,6 @@ footer {
 	  color: #777;
   }
 nav > .dropdown-item {
-	  padding-right: 0;
+	 padding-right: 0;
+	 overflow: hidden;
 }
